--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' rx='20' fill='url(%23grad)'/><defs><linearGradient id='grad' x1='0%25' y1='0%25' x2='100%25' y2='100%25'><stop offset='0%25' style='stop-color:%23fbbf24'/><stop offset='100%25' style='stop-color:%23f97316'/></linearGradient></defs><path d='M25 35h50v8H25zM25 48h35v6H25zM25 59h40v6H25zM25 70h30v6H25z' fill='%230f172a'/></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>newtry</title>
+    <title>JobFinder - Find Your Dream Job</title>
   </head>
   <body>
     <div id="root"></div>
